--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -14,9 +14,14 @@
             <ul class="nav navbar-nav">
               <li><a href="/">Home</a></li><!-- <li class="active"><a href="#">Home</a></li> -->
               <li><a href="#">A Empresa</a></li>
-              <li><a href="#">Informações</a></li>
-              <li><a href="/teste">Teste</a></li>
               <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informações<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/artigos">Artigos</a></li>
+                </ul>
+              </li>
+              <li><a href="/teste">Teste</a></li>
+              <!-- <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Action</a></li>
@@ -24,7 +29,7 @@
                   <li class="dropdown-header">Nav header</li>
                   <li><a href="#">Separated link</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
@@ -32,6 +37,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Profile</a></li>
                   <li><a href="#">Logout</a></li>
+                </ul>
               </li>
             </ul>
             <!-- <ul class="nav navbar-nav navbar-right">
