Pequenas mudanças no template

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,20 +12,19 @@
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <title>Index</title>
-</head>
-<body>
+    </head>
+    <body>
 
 
     {% include '_navbar.html' %}
 
     <div class="container">
 
-        {% block body %}
-        {% endblock %}
+        {% block body %}{% endblock %}
 
     </div>
 
     <script src="../static/js/jquery-3.2.1.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
-</body>
+    </body>
 </html>
