Inclusão da view de login

--- a/templates/artigo.html
+++ b/templates/artigo.html
@@ -4,4 +4,10 @@
 
     <h2>Artigo: {{id}}</h2>
 
+    
+    <a class="btn btn-default" href="/artigos" role="button">Voltar</a>
+    
+    <!-- <a class="btn btn-large btn-block btn-default" href="/artigos" role="button">Voltar</a> -->
+    
+
 {% endblock %}
