--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,17 @@
 
 {% block body %}
 
+    {% if error %}
+
+    <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <strong>Erro:</strong>
+        {{error}}
+    </div>
+
+    {% endif %}
     
+
     <form action="/login" method="post" class="form-inline" role="form">
         <legend>Faça o login para ter acesso:</legend>
         <div class="form-group">
