--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -35,8 +35,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="#">Perfil</a></li>
+            <li><a href="/login">Sair</a></li>
           </ul>
         </li>
       </ul>
