--- a/templates/artigos.html
+++ b/templates/artigos.html
@@ -10,11 +10,12 @@
 
 
     <form action="/artigos" method="post">
-        <div class="input-group input-group-lg">
+        <div class="input-group input-group-md">
             <input name="titulo" type="text" class="form-control" placeholder="Título" required>
-            <input name="corpo" type="text" class="form-control" placeholder="Corpo" required>
+            <input name="texto" type="text" class="form-control" placeholder="Textp" required>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
+    
 
 {% endblock %}
