--- a/templates/artigos.html
+++ b/templates/artigos.html
@@ -12,7 +12,7 @@
     <form action="/artigos" method="post">
         <div class="input-group input-group-md">
             <input name="titulo" type="text" class="form-control" placeholder="Título" required>
-            <input name="texto" type="text" class="form-control" placeholder="Textp" required>
+            <input name="texto" type="text" class="form-control" placeholder="Texto" required>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
