--- a/templates/artigos.html
+++ b/templates/artigos.html
@@ -6,14 +6,18 @@
         {% for i in data %}
         <li class="list-group-item"><a href="/artigo/{{i.id}}">{{i.titulo}}</a></li>
         <a class="btn btn-sm btn-default" href="/artigo/{{i.id}}/remove" role="button">Excluir</a>
+        <a class="btn btn-sm btn-default" href="/artigos?update={{i.id}}" role="button">Atualizar</a>
+        <!-- <a class="btn btn-sm btn-default" href="/artigo/{{i.id}}/update" role="button">Atualizar</a> -->
         {% endfor %}
     </ul>
 
 
     <form action="/artigos" method="post">
         <div class="input-group input-group-md">
-            <input name="titulo" type="text" class="form-control" placeholder="Título" required>
-            <input name="texto" type="text" class="form-control" placeholder="Texto" required>
+            {% for i in update %}
+            <input name="titulo" type="text" class="form-control" placeholder="Título" value="{{i.titulo}}" required>
+            <input name="texto" type="text" class="form-control" placeholder="Texto" value="{{i.texto}}" required>
+            {% endfor %}
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
