--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -20,7 +20,7 @@
             <li><a href="/artigos">Artigos</a></li>
           </ul>
         </li>
-        <li><a href="#">Teste</a></li>
+        <li><a href="/contato">Contato</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
